<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/inputLine"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/inputLine"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/outLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnknownId" />

    <TextView
        android:id="@+id/outLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outLine"
        app:layout_constraintBottom_toTopOf="@id/saveBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLine" />

    <Button
        android:id="@+id/saveBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveBTNOnClick"
        android:padding="5dp"
        android:text="@string/saveData"
        app:layout_constraintBottom_toTopOf="@id/subProgram"
        app:layout_constraintEnd_toStartOf="@id/deleteBTN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outLine" />

    <Button
        android:id="@+id/deleteBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="deleteBTNOnClick"
        android:padding="5dp"
        android:text="@string/deleteData"
        app:layout_constraintBottom_toTopOf="@id/subProgram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/saveBTN"
        app:layout_constraintTop_toBottomOf="@id/outLine" />

    <TextView
        android:id="@+id/subProgram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subProgram"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subProgram">

        <LinearLayout
            android:id="@+id/linLayForRule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/information"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:text="@string/information"
                    android:textSize="24dp"
                    tools:ignore="RtlHardcoded" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right|center_vertical"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/informationBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        tools:ignore="InvalidId" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textRules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rules"
                android:visibility="invisible" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>